Title & desc added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/movix-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Movix App</title>
+  <title>Movix: Ratings, Reviews, and Where to Watch the Best Movies & TV Shows</title>
+  <meta name="description"
+    content="Movix is the world's most popular and authoritative source for movie, TV and celebrity content. Find ratings and reviews for the newest movie and TV shows. Get personalized recommendations, and learn where to watch across hundreds of streaming providers.">
 </head>
 
 <body>
