--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/movix-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Movix: Ratings, Reviews, and Where to Watch the Best Movies & TV Shows</title>
+  <title>Movix: Ratings, Overviews, Recommendation for newest Movies & TV Shows</title>
   <meta name="description"
-    content="Movix is the world's most popular and authoritative source for movie, TV and celebrity content. Find ratings and reviews for the newest movie and TV shows. Get personalized recommendations, and learn where to watch across hundreds of streaming providers.">
+    content="Movix is the world's most popular and authoritative source for movie, TV, and celebrity content. Find ratings, overviews, and details, for the newest movies and TV shows. Get personalized recommendations, and similarities to watch hundreds of movies and TV shows.">
 </head>
 
 <body>
